Missing storage_nic_sc and accessories, some quiz but it will come

--- a/pages/parts/cpu_ram.inc.html
+++ b/pages/parts/cpu_ram.inc.html
@@ -25,11 +25,11 @@
 
       <p>CPU aka Central Processing Unit or the brain in the computer. The CPU is the most important part of a computer, it prosscess all of your data into something we can understand.</p>
 	  <p>The first CPUs filled entire rooms, and they have now shrink down to being the same size as a penny. The speed of them has incressed in a same matter. This is all possible because of advancment in technology, the invention of transistor is to this date the biggest advancment. We have now the tecknology to make transistors as big as 14nm (comersial) soon 7 and 10nm. We are coming close to the point that we can't shrink them anymore.</p>
-	  <p>When you are buying CPU for your PC there are somethings to watch over. Generation, low/mid/high model, produsent, platform.</p>
+	  <p>When you are buying CPU for your PC there are somethings to watch over. Generation, low/mid/high model, produsent, platform/socket.</p>
 	  <p>Generation: If you are looking on two CPU at the same price, and the only differnece is the generation of them, it is almost always best to take newest one, not only because of the speed increase but also power saving, new features that are introduce or integrated into the CPU.</p>
 	  <p>Low/Mid/High model: It can be really hard to se the differnce between low/mid/high models, because most of the differences is hidden or very advanced and not likely written on their information note. The easiest way is to look at the price, often the pricer the better. One more things is number of cores if you look at the same vendor, the more the better.</p>
 	  <p>Produsent or Vendor: For normal consumer PC AMD and Intel is the biggest CPU produsents, where Intel have the repuation of having the best performing CPUs but also the priciest, where AMD have great CPUs for have decent price. But this can change when a new generation is released.</p>
-	  <p>Platfrom:
+	  <p>Platfrom / Socket: This is important because you have to match the CPU with the motherboard, both have to use the same platform / socket. Some platform / socket is AM1, AM2, AM3, AM3+ does are for AMD, and for Intel we have LGA775, LGA1366, LGA1156, LGA1155, LGA2011. With a new platform new features are introduced, DDR4, USB3.1 Gen 2 and M.2 are some examples.
     </section>
 
     <section id="ram">
@@ -37,7 +37,10 @@
         <h1><a href="#ram">RAM</a></h1>
       </header>
 
-      <p>RAM or Random Access Memory is the place your data is stored when it in use. When you boot up your computer the OS is loaded into the RAM </p>
+      <p>RAM or Random Access Memory is the place your data is stored when it in use. The CPU will get most of its data from here, and store all its data between jobs. When you boot up your computer the OS is loaded into the RAM, so the CPU have fast acsess for the data.</p>
+	  <p>We have many types of RAM, the type used most in PCs are DDR-RAM. DDR has many generations DDR, DDR2, DDR3 and DDR4 for every generation have have gotten a increase in bandwidth there DDR4 is the newest and best.</p>
+	  <p>DDR, DDR2, DDR3 and DDR4 cannot be used interchangble (DDR3L and DDR4 can) so you have to get the right RAM for your PC.</p>
+	  <p>When buying RAM you have to look at type, but also the frequenzy, the higher the better, and the latensy, the lower the better.</p>
     </section>
   </body>
 </html>
