--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -26,16 +26,75 @@
       <form id="parts-quiz" class="quiz">
         <ol>
           <li>
-            <p>Part parts partpart?</p>
-            <label><input type="radio" name="one" value="part" /> Part</label>
-            <label><input type="radio" name="one" value="parts" /> Parts</label>
-            <label><input type="radio" name="one" value="partpart" /> Partpart</label>
+            <p>What dose CPU stand for?</p>
+            <label><input type="radio" name="one" value="Central Proccsess Unit" />Central Proccsess Unit</label>
+            <label><input type="radio" name="one" value="Centrum Procsess Union" />Centrum Procsess Union</label>
+            <label><input type="radio" name="one" value="Centring Procsess Unit" />Centring Procsess Unit</label>
+			<input type="hidden" name="one_answer" value="Central Proccsess Unit" />
           </li>
           <li>
-            <p>GPU?</p>
-            <label><input type="radio" name="two" value="yes" /> Yes!</label>
-            <label><input type="radio" name="two" value="no" /> NO?</label>
-            <label><input type="radio" name="two" value="video_card" /> Video card!</label>
+            <p>What types of DDR can be used interchangble?</p>
+            <label><input type="radio" name="two" value="DDR and DDR2" />DDR and DDR2</label>
+            <label><input type="radio" name="two" value="DDR, DDR2 and DDR3" />DDR, DDR2 and DDR3</label>
+            <label><input type="radio" name="two" value="DDR and DDR3" />DDR and DDR3</label>
+			<label><input type="radio" name="two" value="DDR and DDR3" />DDR and DDR3</label>
+            <label><input type="radio" name="two" value="DDR3 and DDR4" />DDR3 and DDR4</label>
+			<label><input type="radio" name="two" value="DDR3L and DDR4" />DDR3L and DDR4</label>
+            <label><input type="radio" name="two" value="DDR3L and DDR2" />DDR3L and DDR2</label>
+			<input type="hidden" name="two_answer" value="DDR3L and DDR4" />
+          </li>
+		  <li>
+            <p>What have to match between motherboard and CPU?</p>
+            <label><input type="radio" name="three" value="Size" />Size</label>
+            <label><input type="radio" name="three" value="Color" />Color</label>
+            <label><input type="radio" name="three" value="Speed" />Speed</label>
+			<label><input type="radio" name="three" value="Socket" />Socket</label>
+			<input type="hidden" name="three_answer" value="Socket" />
+          </li>
+		  <li>
+            <p>What dose GPU stand for?</p>
+            <label><input type="radio" name="four" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
+            <label><input type="radio" name="four" value="Global Procsess Union" />Global Procsess Union</label>
+            <label><input type="radio" name="four" value="Graphics Procsess Union" />Graphics Procsess Union</label>
+			<label><input type="radio" name="four" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
+			<label><input type="radio" name="four" value="Global Procsess Unit" />Global Procsess Unit</label>
+			<input type="hidden" name="four_answer" value="Graphics Procsess Unit" />
+          </li>
+		  <li>
+            <p>lkaøldsføladsgf</p>
+            <label><input type="radio" name="five" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
+            <label><input type="radio" name="five" value="Global Procsess Union" />Global Procsess Union</label>
+            <label><input type="radio" name="five" value="Graphics Procsess Union" />Graphics Procsess Union</label>
+			<label><input type="radio" name="five" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
+			<label><input type="radio" name="five" value="Global Procsess Unit" />Global Procsess Unit</label>
+			<input type="hidden" name="five_answer" value="Graphics Procsess Unit" />
+          </li>
+		  <li>
+            <p>What dose GPU stand for?</p>
+            <label><input type="radio" name="six" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
+            <label><input type="radio" name="six" value="Global Procsess Union" />Global Procsess Union</label>
+            <label><input type="radio" name="six" value="Graphics Procsess Union" />Graphics Procsess Union</label>
+			<label><input type="radio" name="six" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
+			<label><input type="radio" name="six" value="Global Procsess Unit" />Global Procsess Unit</label>
+			<input type="hidden" name="six_answer" value="Graphics Procsess Unit" />
+          </li>
+		  <li>
+            <p>What dose GPU stand for?</p>
+            <label><input type="radio" name="seven" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
+            <label><input type="radio" name="seven" value="Global Procsess Union" />Global Procsess Union</label>
+            <label><input type="radio" name="seven" value="Graphics Procsess Union" />Graphics Procsess Union</label>
+			<label><input type="radio" name="seven" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
+			<label><input type="radio" name="seven" value="Global Procsess Unit" />Global Procsess Unit</label>
+			<input type="hidden" name="seven_answer" value="Graphics Procsess Unit" />
+          </li>
+		  <li>
+            <p>What dose GPU stand for?</p>
+            <label><input type="radio" name="eight" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
+            <label><input type="radio" name="eight" value="Global Procsess Union" />Global Procsess Union</label>
+            <label><input type="radio" name="eight" value="Graphics Procsess Union" />Graphics Procsess Union</label>
+			<label><input type="radio" name="eight" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
+			<label><input type="radio" name="eight" value="Global Procsess Unit" />Global Procsess Unit</label>
+			<input type="hidden" name="eight_answer" value="Graphics Procsess Unit" />
           </li>
         </ol>
         <input type="submit" value="Lock in answers" />
