More conent, more quiz!!!!!

--- a/pages/parts/accessories.inc.html
+++ b/pages/parts/accessories.inc.html
@@ -20,18 +20,42 @@
   <body>
     <section id="accessory_1_wip">
       <header>
-        <h1><a href="#accessory_1_wip">Accessory 1</a></h1>
+        <h1><a href="#accessory_1_wip">Optical Drive</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>You wanna buy a optical drive if want to read/write CDs/DVDs/BluRays. The things to watch out for is, does it support the desierd technolgi, write cabalites, speed of read and write.</p>
     </section>
 
     <section id="accessory_2_wip">
       <header>
-        <h1><a href="#accessory_2_wip">Accessory 2</a></h1>
+        <h1><a href="#accessory_2_wip">LEDs</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>If you want to pipup your PC LED bars/strips the way to go, they come in many forms and colors!</p>
+    </section>
+	
+	<section id="accessory_3_wip">
+      <header>
+        <h1><a href="#accessory_3_wip">Keyboard</a></h1>
+      </header>
+
+      <p>A keyboard is a must, what is important about a keyboard is how you feel about writing on it. Is it good to rest your hands on? Do you like the buttons this is up to you. We have 2 types of keyboard for the normal PC, mechanical and nonmechanical where the best and priciest is the mechanical.</p>
+    </section>
+	
+	<section id="accessory_4_wip">
+      <header>
+        <h1><a href="#accessory_4_wip">Mouse</a></h1>
+      </header>
+
+      <p>Like keyboard this is also a must. Same thing here feel is importnat. It exist optical and laser mices, optical use light to track movment and can be used on almost every surface. Laser is very good and precise, but cannot be used on every surface and are a bit more pricey</p>
+    </section>
+	
+	<section id="accessory_4_wip">
+      <header>
+        <h1><a href="#accessory_4_wip">Screen</a></h1>
+      </header>
+
+      <p>Also a must. Screen comes in many sizes where a normal size is between 21"-32" but can be lower or higher. Important stuff about a screen is resolution, 1080p up to 2160p. Latency of the screen 1ms to 1sec. Screenformat 16:9, 16:10, 4:3, level of accursity of colors.</p>
     </section>
   </body>
 </html>
