--- a/pages/parts/cooling_psu_case.inc.html
+++ b/pages/parts/cooling_psu_case.inc.html
@@ -48,7 +48,7 @@
       </header>
 
       <p>Cases comes in many differnet sizes and forms. What you buy is up to you, but you have to match your case with your parts. Motherboard, PSU, cooling have to fit in the case.</p>
-	  <p>We have big/mid/small towers the normal factor for a PC, but also cube pluss many more. Here again ATX, ATX-Mini is a indication of size, where a ATX case will fit a ATX board.</p>
+	  <p>We have big/mid/small towers the is the normal form for a PC, but also cube form pluss many more. Here again ATX, ATX-Mini is a indication of size, where a ATX case will fit a ATX board.</p>
     </section>
   </body>
 </html>
