--- a/pages/parts/storage_nic_sc.inc.html
+++ b/pages/parts/storage_nic_sc.inc.html
@@ -23,7 +23,11 @@
         <h1><a href="#storage">Storage</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>In 2016 we have 2 technoliges for storage HDD and SSD. Hard Disk Drive and Solid State Drive</p>
+	  <p>HDD is the most used, cheapest and have a lot of space, SDD is begining to take over for HDD, but is a bit pricer at the moment, you can have a lot of space but you have to pay.</p>
+	  <p>HDD comes commonly in to forms, 2,5" and 3,5" this is the size of the spinning disk inside, the outer dimensons is bigger but their are also standarliesed. 2,5" is used in laptops and small PCs and are a bit pricer than 3,5". 3,5" is used in desktop. What determens the speed of HDDs is the RPM on the spinning disk inside and number of plates. Normal RPM is 5400rpm and 7200rpm and normal storage space range from 100GB to 4000GB/4TB.</p>
+	  <p>SSD have many forms, the normal 2,5" size that is exasact the same size as 2,5" a HDD. But also we have M.2, U.2, and PCI forms. Speed of SSD can variy a bit, but one thing can we say for sure, it is much faster than a normal HDD. Speed of a normal consumer 2,5" SSD lays around 500MB/s read and write, but can reach up to 3000MB/s read and 1500MB/s write for the other SSDs markeed for the more extreme user that is willing to pay up.</p>
+	  
     </section>
 
     <section id="nic">
@@ -31,7 +35,10 @@
         <h1><a href="#nic">Network Card</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>A cabled network card is usaly integrated into your motherboard and has the speed 1Gb/s this is more than engoughf performance for a noraml user. But if you want wifi on your PC you may very often buy a external card or if you want the best of the best cabled internet</p>
+	  <p>For external wifi card it is important if it support the newest wifi standard AC, or AC Wave 2 and the speed you can get from around 300Mb/s up to 1500Mb/s. Youself decied what you want the better the pricer, but also your wifirouter must support the speeds and the standards</p>
+	  <p>External cabled card must now a days support speeds up to 1Gb/s. Buying a external cabled card isnt something a normal user would because the integrated to the motherboard is more than engoughf, but if you want a extra for more bandwitdh or 2 networks you can get one.</p>
+	  <p>Remember a external card will take up a PCI-E x1 or x4 slot, you have to have the connector on the motherboard and the space.</p>
     </section>
 
     <section id="sound_card">
@@ -39,7 +46,7 @@
         <h1><a href="#sound_card">Sound Card</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>This is very similar to a external network card. You have allready a sound card integrated on your motherboard. A normal user woulndt need a external card. If you are a hifi entuasit you wanna buy one, the pricer the better.</p>
     </section>
   </body>
 </html>
