--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -37,6 +37,7 @@
             <label><input type="radio" name="two" value="DDR and DDR2" />DDR and DDR2</label>
             <label><input type="radio" name="two" value="DDR, DDR2 and DDR3" />DDR, DDR2 and DDR3</label>
             <label><input type="radio" name="two" value="DDR and DDR3" />DDR and DDR3</label>
+			<br>	 
 			<label><input type="radio" name="two" value="DDR and DDR3" />DDR and DDR3</label>
             <label><input type="radio" name="two" value="DDR3 and DDR4" />DDR3 and DDR4</label>
 			<label><input type="radio" name="two" value="DDR3L and DDR4" />DDR3L and DDR4</label>
@@ -56,45 +57,44 @@
             <label><input type="radio" name="four" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
             <label><input type="radio" name="four" value="Global Procsess Union" />Global Procsess Union</label>
             <label><input type="radio" name="four" value="Graphics Procsess Union" />Graphics Procsess Union</label>
+			<br>
 			<label><input type="radio" name="four" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
 			<label><input type="radio" name="four" value="Global Procsess Unit" />Global Procsess Unit</label>
 			<input type="hidden" name="four_answer" value="Graphics Procsess Unit" />
           </li>
 		  <li>
-            <p>lkaøldsføladsgf</p>
-            <label><input type="radio" name="five" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
-            <label><input type="radio" name="five" value="Global Procsess Union" />Global Procsess Union</label>
-            <label><input type="radio" name="five" value="Graphics Procsess Union" />Graphics Procsess Union</label>
-			<label><input type="radio" name="five" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
-			<label><input type="radio" name="five" value="Global Procsess Unit" />Global Procsess Unit</label>
-			<input type="hidden" name="five_answer" value="Graphics Procsess Unit" />
+            <p>What dose PSU stand for?</p>
+            <label><input type="radio" name="five" value="Grape Proccsess Unit" />Post Sentral Unit</label>
+            <label><input type="radio" name="five" value="Global Procsess Union" />Power Surf Unit</label>
+            <label><input type="radio" name="five" value="Graphics Procsess Union" />Power Supply Unit</label>
+			<input type="hidden" name="five_answer" value="Power Supply Unit" />
           </li>
 		  <li>
-            <p>What dose GPU stand for?</p>
-            <label><input type="radio" name="six" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
-            <label><input type="radio" name="six" value="Global Procsess Union" />Global Procsess Union</label>
-            <label><input type="radio" name="six" value="Graphics Procsess Union" />Graphics Procsess Union</label>
-			<label><input type="radio" name="six" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
-			<label><input type="radio" name="six" value="Global Procsess Unit" />Global Procsess Unit</label>
-			<input type="hidden" name="six_answer" value="Graphics Procsess Unit" />
+            <p>What dose HDD stand for?</p>
+            <label><input type="radio" name="six" value="Grape Proccsess Unit" />Hard Disk Drive</label>
+            <label><input type="radio" name="six" value="Global Procsess Union" />Hover Disk Drive</label>
+            <label><input type="radio" name="six" value="Graphics Procsess Union" />Hover Drive Disk</label>
+			<label><input type="radio" name="six" value="Graphics Procsess Unit" />Hard Drive Disk</label>
+			<label><input type="radio" name="six" value="Global Procsess Unit" />Hand Dual Drive</label>
+			<input type="hidden" name="six_answer" value="Hard Disk Drive" />
           </li>
 		  <li>
-            <p>What dose GPU stand for?</p>
-            <label><input type="radio" name="seven" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
-            <label><input type="radio" name="seven" value="Global Procsess Union" />Global Procsess Union</label>
-            <label><input type="radio" name="seven" value="Graphics Procsess Union" />Graphics Procsess Union</label>
-			<label><input type="radio" name="seven" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
-			<label><input type="radio" name="seven" value="Global Procsess Unit" />Global Procsess Unit</label>
-			<input type="hidden" name="seven_answer" value="Graphics Procsess Unit" />
+            <p>What dose SSD stand for?</p>
+            <label><input type="radio" name="seven" value="Grape Proccsess Unit" />State Solid Drive</label>
+            <label><input type="radio" name="seven" value="Global Procsess Union" />Salad Soupe Disk</label>
+            <label><input type="radio" name="seven" value="Graphics Procsess Union" />Super Super Drive</label>
+			<label><input type="radio" name="seven" value="Graphics Procsess Unit" />Solid State Drive</label>
+			<label><input type="radio" name="seven" value="Global Procsess Unit" />Solid Super Drive</label>
+			<input type="hidden" name="seven_answer" value="Solid State Drive" />
           </li>
 		  <li>
-            <p>What dose GPU stand for?</p>
-            <label><input type="radio" name="eight" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
-            <label><input type="radio" name="eight" value="Global Procsess Union" />Global Procsess Union</label>
-            <label><input type="radio" name="eight" value="Graphics Procsess Union" />Graphics Procsess Union</label>
-			<label><input type="radio" name="eight" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
-			<label><input type="radio" name="eight" value="Global Procsess Unit" />Global Procsess Unit</label>
-			<input type="hidden" name="eight_answer" value="Graphics Procsess Unit" />
+            <p>Why would you buy LED bars/strips?</p>
+            <label><input type="radio" name="eight" value="Grape Proccsess Unit" />More heat in my PC</label>
+            <label><input type="radio" name="eight" value="Global Procsess Union" />Waste my money</label>
+            <label><input type="radio" name="eight" value="Graphics Procsess Union" />Pipup my PC!</label>
+			<label><input type="radio" name="eight" value="Graphics Procsess Unit" />Sounds cool</label>
+			<label><input type="radio" name="eight" value="Global Procsess Unit" />Braging rights</label>
+			<input type="hidden" name="eight_answer" value="Pipup my PC!" />
           </li>
         </ol>
         <input type="submit" value="Lock in answers" />
