Mmh this page seems to have been updated

--- a/pages/parts/mb_gpu.inc.html
+++ b/pages/parts/mb_gpu.inc.html
@@ -23,7 +23,7 @@
         <h1><a href="#motherboard">Motherboard</a></h1>
       </header>
 
-      <p>The motherboard is what connects the parts of your PC, the is a hint to this.</p>
+      <p>The motherboard is what connects the parts of your PC, the name is a hint to this.</p>
 	  <p>What motherboard you buy isnt that important besides that it supports your CPU and other parts, to match the CPU your motherboard must be of the same platform / sockets as your CPU. Pricer motherboard will do little for the overall performance of your PC, but it can add extra features as more connectors for HDDs, M.2 suppport and more USB connectors.</p>
 	  <p>Motherboard comes in many formfactors as ATX, Micro-ATX, Mini-ATX, Nano-ATX where ATX is the most normal and popular. The difference between them is the size. This mean that you have to check if your case can fit and support the form factor you choose. Smaller motherboard will also dont fit the same amount of connector / features as one bigger.</p>
 	  
@@ -34,7 +34,7 @@
         <h1><a href="#gpu">Video Card</a></h1>
       </header>
 
-      <p>Video Card or GPU is what produce the picture on your screen. The GPU can be a part of your CPU or a standalone part of your PC.</p>
+      <p>Video Card or GPU or Graphics Processing Unit is what produce the picture on your screen. The GPU can be a part of your CPU or a standalone part of your PC.</p>
 	  <p>A GPU is very similar with a CPU, the difference is that a CPU is made up of 1-8 cores, where a GPU is made up of around 1000. This is because than can the GPU split the image to many little parts and procsess them at the same.</p>
 	  <p>When buying a GPU have to think over performance need, cooling and price.</p>
 	  <p>Performance: Can you live with a buildin GPU? or are you gonna play game, or video editing. Then you need a external GPU, where the price usaly decides the performance of the GPU. The big competitors on the GPU market is nVidia and AMD. As late 2016 nVidia has the best performing GPUs but at a high price, AMD as not yet relesed their top-tier GPUs.</p>
