--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -97,7 +97,7 @@
 			<input type="hidden" name="eight_answer" value="Pipup my PC!" />
           </li>
         </ol>
-        <input type="submit" value="Lock in answers" />
+        <input type="submit" value="Lock in answers" onclick="validateRadio()"/>
       </form>
     </section>
   </body>
