--- a/pages/parts/accessories.inc.html
+++ b/pages/parts/accessories.inc.html
@@ -23,7 +23,7 @@
         <h1><a href="#accessory_1_wip">Optical Drive</a></h1>
       </header>
 
-      <p>You wanna buy a optical drive if want to read/write CDs/DVDs/BluRays. The things to watch out for is, does it support the desierd technolgi, write cabalites, speed of read and write.</p>
+      <p>You wanna buy a optical drive if want to read/write CDs/DVDs/Blu Rays. The things to watch out for is, does it support the desired technology, write capabilities, speed of read and write.</p>
     </section>
 
     <section id="accessory_2_wip">
