--- a/pages/parts/cooling_psu_case.inc.html
+++ b/pages/parts/cooling_psu_case.inc.html
@@ -24,11 +24,11 @@
       </header>
 
       <p>Cooling of your PC can mean many things, either fans installed on the case or fans installed on the CPU or GPU.</p>
-	  <p>Fans on the case is used for shifting the air in your case so the hot air is pushed out and cold air is taken in. Minium you want 2 fans, 1 in and 1 out, but you can add more. Size and depth of the fans depends where bigger and deper fans is best, bigger fans also can run slower than smaller fans that will reduse noise.</p>
-      <p>Fans CPU and GPU is for cooling the parts it self, but it exist more than fans you can use, we have watercooling, passive cooling, nitrogen cooling and phase change cooling.</p>
-	  <p>Fans is the most normal way to cool your PC parts, the easiest and the cheapest. Some PC dont need the fnas either, only the airflow from your case fans.</p>
+      <p>Fans on the case is used for shifting the air in your case so the hot air is pushed out and cold air is taken in. Minium you want 2 fans, 1 in and 1 out, but you can add more. Size and depth of the fans depends where bigger and deper fans is best, bigger fans also can run slower than smaller fans that will reduse noise.</p>
+      <p>Fans CPU and GPU is for cooling the parts it self, but it exist more than fans you can use, we have water cooling, passive cooling, nitrogen cooling and phase change cooling.</p>
+	  <p>Fans is the most normal way to cool your PC parts, the easiest and the cheapest. Some PC dont need the fans either, only the airflow from your case fans.</p>
 	  <p>If you are thinking of extreme overclocking watercooling, nitrogencolling or phase change cooling is the way to go. Watercooling is become more and more common with closedloop watercooling, but that is something we will not talk about. Nitrogencooling and phase change cooling is for the most extreme of us, and not sutible for normal days use, because of all the work and maintaing needed.</p>
-	  <p>When buying coolingparts you have to check if the parts will fit with your parts, does your case take 200mm fans? You have to check if your CPU fan will fit with your platform / socket</p>
+	  <p>When buying cooling parts you have to check if the parts will fit with your parts, does your case take 200mm fans? You have to check if your CPU fan will fit with your platform / socket.</p>
     </section>
 
     <section id="psu">
@@ -38,8 +38,8 @@
 
       <p>PSU or Power Supply Unit is what deliver power to your PC, the important things here are Watts, certification and size.</p>
 	  <p>Your PC will draw a certion amount of power, that is the watt, your PSU have to match this number. It can be hard to know this number, you have to look at your parts specs and see how much they use and match this number, some normal numbers in between 400-1000w a big range.</p>
-	  <p>PSU have Bronze, Silver, Gold, Platinum certifcation this means how well build and perfoming the PSU is, where Bronze is worst and Platinum is the best.</p>
-	  <p>It is where important that you can fit your PSU into your case, this is measuered in the same matter as your motherboard, ATX, ATX-Mini</p>
+	  <p>PSU have Bronze, Silver, Gold, Platinum certification this means how well build and performing the PSU is, where Bronze is worst and Platinum is the best.</p>
+	  <p>It is where important that you can fit your PSU into your case, this is measured in the same matter as your motherboard, ATX, ATX-Mini</p>
     </section>
 
     <section id="case">
@@ -47,8 +47,8 @@
         <h1><a href="#case">Case</a></h1>
       </header>
 
-      <p>Cases comes in many differnet sizes and forms. What you buy is up to you, but you have to match your case with your parts. Motherboard, PSU, cooling have to fit in the case.</p>
-	  <p>We have big/mid/small towers the is the normal form for a PC, but also cube form pluss many more. Here again ATX, ATX-Mini is a indication of size, where a ATX case will fit a ATX board.</p>
+      <p>Cases comes in many different sizes and forms. What you buy is up to you, but you have to match your case with your parts. Motherboard, PSU, cooling have to fit in the case.</p>
+	  <p>We have big/mid/small towers the is the normal form for a PC, but also cube form plus many more. Here again ATX, ATX-Mini is an indication of size, where a ATX case will fit a ATX board.</p>
     </section>
   </body>
 </html>
