--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -33,7 +33,7 @@
 			<input type="hidden" name="one_answer" value="Central Proccsess Unit" />
           </li>
           <li>
-            <p>What types of DDR can be used interchangble?</p>
+            <p>What types of DDR can be used interchangeable?</p>
             <label><input type="radio" name="two" value="DDR and DDR2" />DDR and DDR2</label>
             <label><input type="radio" name="two" value="DDR, DDR2 and DDR3" />DDR, DDR2 and DDR3</label>
             <label><input type="radio" name="two" value="DDR and DDR3" />DDR and DDR3</label>
