--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -26,7 +26,7 @@
       <form id="parts-quiz" class="quiz">
         <ol>
           <li>
-            <p>What dose CPU stand for?</p>
+            <p>What does CPU stand for?</p>
             <label><input type="radio" name="one" value="Central Proccsess Unit" />Central Proccsess Unit</label>
             <label><input type="radio" name="one" value="Centrum Procsess Union" />Centrum Procsess Union</label>
             <label><input type="radio" name="one" value="Centring Procsess Unit" />Centring Procsess Unit</label>
@@ -45,7 +45,7 @@
 			<input type="hidden" name="two_answer" value="DDR3L and DDR4" />
           </li>
 		  <li>
-            <p>What have to match between motherboard and CPU?</p>
+            <p>What have to match between the motherboard and CPU?</p>
             <label><input type="radio" name="three" value="Size" />Size</label>
             <label><input type="radio" name="three" value="Color" />Color</label>
             <label><input type="radio" name="three" value="Speed" />Speed</label>
@@ -53,7 +53,7 @@
 			<input type="hidden" name="three_answer" value="Socket" />
           </li>
 		  <li>
-            <p>What dose GPU stand for?</p>
+            <p>What does GPU stand for?</p>
             <label><input type="radio" name="four" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
             <label><input type="radio" name="four" value="Global Procsess Union" />Global Procsess Union</label>
             <label><input type="radio" name="four" value="Graphics Procsess Union" />Graphics Procsess Union</label>
@@ -63,14 +63,14 @@
 			<input type="hidden" name="four_answer" value="Graphics Procsess Unit" />
           </li>
 		  <li>
-            <p>What dose PSU stand for?</p>
+            <p>What does PSU stand for?</p>
             <label><input type="radio" name="five" value="Grape Proccsess Unit" />Post Sentral Unit</label>
             <label><input type="radio" name="five" value="Global Procsess Union" />Power Surf Unit</label>
             <label><input type="radio" name="five" value="Graphics Procsess Union" />Power Supply Unit</label>
 			<input type="hidden" name="five_answer" value="Power Supply Unit" />
           </li>
 		  <li>
-            <p>What dose HDD stand for?</p>
+            <p>What does HDD stand for?</p>
             <label><input type="radio" name="six" value="Grape Proccsess Unit" />Hard Disk Drive</label>
             <label><input type="radio" name="six" value="Global Procsess Union" />Hover Disk Drive</label>
             <label><input type="radio" name="six" value="Graphics Procsess Union" />Hover Drive Disk</label>
@@ -79,7 +79,7 @@
 			<input type="hidden" name="six_answer" value="Hard Disk Drive" />
           </li>
 		  <li>
-            <p>What dose SSD stand for?</p>
+            <p>What does SSD stand for?</p>
             <label><input type="radio" name="seven" value="Grape Proccsess Unit" />State Solid Drive</label>
             <label><input type="radio" name="seven" value="Global Procsess Union" />Salad Soupe Disk</label>
             <label><input type="radio" name="seven" value="Graphics Procsess Union" />Super Super Drive</label>
