--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -27,10 +27,10 @@
         <ol>
           <li>
             <p>What dose CPU stand for?</p>
-            <label><input type="radio" name="one" value="Central Proccsess Unit" />Central Proccsess Unit</label>
-            <label><input type="radio" name="one" value="Centrum Procsess Union" />Centrum Procsess Union</label>
-            <label><input type="radio" name="one" value="Centring Procsess Unit" />Centring Procsess Unit</label>
-			<input type="hidden" name="one_answer" value="Central Proccsess Unit" />
+            <label><input type="radio" name="one" value="Central Processing Unit" />Central Proccsess Unit</label>
+            <label><input type="radio" name="one" value="Centrum Processing Union" />Centrum Procsess Union</label>
+            <label><input type="radio" name="one" value="Centring Processing Unit" />Centring Procsess Unit</label>
+			<input type="hidden" name="one_answer" value=" Central Processing Unit" />
           </li>
           <li>
             <p>What types of DDR can be used interchangeable?</p>
@@ -97,7 +97,7 @@
 			<input type="hidden" name="eight_answer" value="Pipup my PC!" />
           </li>
         </ol>
-        <input type="submit" value="Lock in answers" onclick="validateRadio()"/>
+        <button type="button" value="Lock in answers" onclick="validateRadio()">Lock in answers</button>
       </form>
     </section>
   </body>
