--- a/pages/oss/windows.inc.html
+++ b/pages/oss/windows.inc.html
@@ -23,7 +23,34 @@
         <h1><a href="#windows">Windows</a></h1>
       </header>
 
-      <p>Lorem ipsum dolor sit amet.</p>
+      <p>Windows is a operating system that is developed by Microsoft. 
+During the growing popularity of graphical user interfaces in 1985, Microsoft and Windows had found its palce in the market. Since then, 
+Windows have continually been updated and new versions every few years. Today, Microsoft Windows has grown to own more than 90% of the market share.</p>
+      <p>
+        Windows 1.0 was the very first version and it was released in 1985, one year after Mac OS. Windows 1.0 featured components like calculator, 
+calender, clock, control panel, notepad, paint and some other features. In Windows 1.0, only the modal dialog boxes could overlap windows. When Windows 2.0 
+        came in 1987 there was many improvements, among these were keyboard shortcuts, user interface overhal and overlapping windows. Here is a list 
+over all the different versions of Windows:
+      </p>
+      <ol>
+        <li>Windows 1.0 (1985)</li>
+        <li>Windows 2.0 (1987)</li>
+        <li>Windows 3.0, 3.1 and 3.2 (1990, 1992, 1994)</li>
+        <li>Windows NT 3.1, NT 3.5, NT 4 (1993, 1994, 1996)</li>
+        <li>Windows 95 (1995)</li>
+        <li>Windows 98 (1998)</li>
+        <li>Windows 2000 (2000)</li>
+        <li>Windows XP (2001)</li>
+        <li>Windows XP Professional x64 (2005)</li>
+        <li>Windows Vista (2007)</li>
+        <li>Windows 7 (2009)</li>
+        <li>Windows 8, 8.1 (2012, 2013)</li>
+        <li>Windows 10 (2015)</li>
+      </ol>
+      <p>
+        Microsoft has not only produces the Windows operating system for computers, but they have also produced mobile versions. Although the mobile 
+versions are not the most popular, it is the third most popular, behind Android and iOS
+      </p>
     </section>
   </body>
 </html>
