Added questions about windows

--- a/pages/oss/quiz.inc.html
+++ b/pages/oss/quiz.inc.html
@@ -26,16 +26,18 @@
       <form id="oss-quiz" class="quiz">
         <ol>
           <li>
-            <p>Part parts partpart?</p>
-            <label><input type="radio" name="one" value="part" /> Part</label>
-            <label><input type="radio" name="one" value="parts" /> Parts</label>
-            <label><input type="radio" name="one" value="partpart" /> Partpart</label>
+            <p>In what year did was Windows 1.0 released?</p>
+            <label><input type="radio" name="one" value="1987" /> 1987</label>
+            <label><input type="radio" name="one" value="1989" /> 1989</label>
+            <label><input type="radio" name="one" value="1985" /> 1985</label>
+            <label><input type="radio" name="one" value="1984" /> 1984</label>
           </li>
           <li>
-            <p>GPU?</p>
-            <label><input type="radio" name="two" value="yes" /> Yes!</label>
-            <label><input type="radio" name="two" value="no" /> NO?</label>
-            <label><input type="radio" name="two" value="video_card" /> Video card!</label>
+            <p>What company develops, markets and sells Windows?</p>
+            <label><input type="radio" name="two" value="yes" /> Hewlett Packard</label>
+            <label><input type="radio" name="two" value="no" /> Microsoft</label>
+            <label><input type="radio" name="two" value="video_card" /> Lenovo</label>
+            <label><input type="radio" name="two" value="video_card" /> Google</label>
           </li>
         </ol>
         <input type="submit" value="Lock in answers" />
