--- a/pages/parts/quiz.inc.html
+++ b/pages/parts/quiz.inc.html
@@ -27,10 +27,10 @@
         <ol>
           <li>
             <p>What dose CPU stand for?</p>
-            <label><input type="radio" name="one" value="Central Processing Unit" />Central Proccsess Unit</label>
-            <label><input type="radio" name="one" value="Centrum Processing Union" />Centrum Procsess Union</label>
-            <label><input type="radio" name="one" value="Centring Processing Unit" />Centring Procsess Unit</label>
-			<input type="hidden" name="one_answer" value=" Central Processing Unit" />
+            <label><input type="radio" name="one" value="Central Processing Unit" />Central Processing Unit</label>
+            <label><input type="radio" name="one" value="Centrum Processing Union" />Centrum Processing Union</label>
+            <label><input type="radio" name="one" value="Centring Processing Unit" />Centring Processing Unit</label>
+			<input type="hidden" name="one_answer" value="Central Processing Unit" />
           </li>
           <li>
             <p>What types of DDR can be used interchangeable?</p>
@@ -54,46 +54,46 @@
           </li>
 		  <li>
             <p>What does GPU stand for?</p>
-            <label><input type="radio" name="four" value="Grape Proccsess Unit" />Grape Proccsess Unit</label>
-            <label><input type="radio" name="four" value="Global Procsess Union" />Global Procsess Union</label>
-            <label><input type="radio" name="four" value="Graphics Procsess Union" />Graphics Procsess Union</label>
+            <label><input type="radio" name="four" value="Grape Processing Unit" />Grape Processing Unit</label>
+            <label><input type="radio" name="four" value="Global Processing Union" />Global Processing Union</label>
+            <label><input type="radio" name="four" value="Graphics Processing Union" />Graphics Processing Union</label>
 			<br>
-			<label><input type="radio" name="four" value="Graphics Procsess Unit" />Graphics Procsess Unit</label>
-			<label><input type="radio" name="four" value="Global Procsess Unit" />Global Procsess Unit</label>
-			<input type="hidden" name="four_answer" value="Graphics Procsess Unit" />
+			<label><input type="radio" name="four" value="Graphics Processing Unit" />Graphics Processing Unit</label>
+			<label><input type="radio" name="four" value="Global Processing Unit" />Global Processing Unit</label>
+			<input type="hidden" name="four_answer" value="Graphics Processing Unit" />
           </li>
 		  <li>
             <p>What does PSU stand for?</p>
-            <label><input type="radio" name="five" value="Grape Proccsess Unit" />Post Sentral Unit</label>
-            <label><input type="radio" name="five" value="Global Procsess Union" />Power Surf Unit</label>
-            <label><input type="radio" name="five" value="Graphics Procsess Union" />Power Supply Unit</label>
+            <label><input type="radio" name="five" value="Post Sentral Unit" />Post Sentral Unit</label>
+            <label><input type="radio" name="five" value="Power Surf Unit" />Power Surf Unit</label>
+            <label><input type="radio" name="five" value="Power Supply Unit" />Power Supply Unit</label>
 			<input type="hidden" name="five_answer" value="Power Supply Unit" />
           </li>
 		  <li>
             <p>What does HDD stand for?</p>
-            <label><input type="radio" name="six" value="Grape Proccsess Unit" />Hard Disk Drive</label>
-            <label><input type="radio" name="six" value="Global Procsess Union" />Hover Disk Drive</label>
-            <label><input type="radio" name="six" value="Graphics Procsess Union" />Hover Drive Disk</label>
-			<label><input type="radio" name="six" value="Graphics Procsess Unit" />Hard Drive Disk</label>
-			<label><input type="radio" name="six" value="Global Procsess Unit" />Hand Dual Drive</label>
+            <label><input type="radio" name="six" value="Hard Disk Drive" />Hard Disk Drive</label>
+            <label><input type="radio" name="six" value="Hover Disk Drive" />Hover Disk Drive</label>
+            <label><input type="radio" name="six" value="Hover Drive Disk" />Hover Drive Disk</label>
+			<label><input type="radio" name="six" value="Hard Drive Disk" />Hard Drive Disk</label>
+			<label><input type="radio" name="six" value="Hand Dual Drive" />Hand Dual Drive</label>
 			<input type="hidden" name="six_answer" value="Hard Disk Drive" />
           </li>
 		  <li>
             <p>What does SSD stand for?</p>
-            <label><input type="radio" name="seven" value="Grape Proccsess Unit" />State Solid Drive</label>
-            <label><input type="radio" name="seven" value="Global Procsess Union" />Salad Soupe Disk</label>
-            <label><input type="radio" name="seven" value="Graphics Procsess Union" />Super Super Drive</label>
-			<label><input type="radio" name="seven" value="Graphics Procsess Unit" />Solid State Drive</label>
-			<label><input type="radio" name="seven" value="Global Procsess Unit" />Solid Super Drive</label>
+            <label><input type="radio" name="seven" value="State Solid Drive" />State Solid Drive</label>
+            <label><input type="radio" name="seven" value="Salad Soupe Disk" />Salad Soupe Disk</label>
+            <label><input type="radio" name="seven" value="Super Super Drive" />Super Super Drive</label>
+			<label><input type="radio" name="seven" value="Solid State Drive" />Solid State Drive</label>
+			<label><input type="radio" name="seven" value="Solid Super Drive" />Solid Super Drive</label>
 			<input type="hidden" name="seven_answer" value="Solid State Drive" />
           </li>
 		  <li>
             <p>Why would you buy LED bars/strips?</p>
-            <label><input type="radio" name="eight" value="Grape Proccsess Unit" />More heat in my PC</label>
-            <label><input type="radio" name="eight" value="Global Procsess Union" />Waste my money</label>
-            <label><input type="radio" name="eight" value="Graphics Procsess Union" />Pipup my PC!</label>
-			<label><input type="radio" name="eight" value="Graphics Procsess Unit" />Sounds cool</label>
-			<label><input type="radio" name="eight" value="Global Procsess Unit" />Braging rights</label>
+            <label><input type="radio" name="eight" value="More heat in my PC" />More heat in my PC</label>
+            <label><input type="radio" name="eight" value="Waste my money" />Waste my money</label>
+            <label><input type="radio" name="eight" value="Pipup my PC!" />Pipup my PC!</label>
+			<label><input type="radio" name="eight" value="Sounds cool" />Sounds cool</label>
+			<label><input type="radio" name="eight" value="Braging rights" />Braging rights</label>
 			<input type="hidden" name="eight_answer" value="Pipup my PC!" />
           </li>
         </ol>
